--- a/backend/appserver/package.json
+++ b/backend/appserver/package.json
@@ -7,10 +7,11 @@
     "preinstall": "npm install -g forever",
     "postinstall": "npm run build",
     "build": "browserify -d src/app-runner.js > public/js/index.js",
-    "start": "forever start --minUptime 1000 --spinSleepTime 1000 appserver.js",
+    "start": "forever start --fifo --minUptime 1000 --spinSleepTime 1000 appserver.js",
     "stop": "forever stop appserver.js"
   },
   "dependencies": {
+    "anypixel": "^1.0.2",
     "body-parser": "1.14.x",
     "ejs": "2.3.x",
     "express": "4.13.x"
