--- a/flutteriodemo/pubspec.yaml
+++ b/flutteriodemo/pubspec.yaml
@@ -61,17 +61,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Libre Franklin
+      fonts:
+        - asset: fonts/LibreFranklin-Regular.ttf
+          weight: 400
+        - asset: fonts/LibreFranklin-Medium.ttf
+          weight: 500
+        - asset: fonts/LibreFranklin-SemiBold.ttf
+          weight: 600
+        - asset: fonts/LibreFranklin-Bold.ttf
+          weight: 700
+        - asset: fonts/LibreFranklin-ExtraBold.ttf
+          weight: 900
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
