--- a/flutteriodemo/pubspec.yaml
+++ b/flutteriodemo/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
-#  firebase_ml_vision: ^0.7.0
+  firebase_ml_vision: ^0.7.0+2
+  camera: ^0.4.2
 
 dev_dependencies:
   flutter_test:
