--- a/flutteriodemo/pubspec.yaml
+++ b/flutteriodemo/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -83,7 +83,18 @@ flutter:
         - asset: fonts/Merriweather-BoldItalic.ttf
           weight: 700
           style: italic
-
+    - family: Roboto Condensed
+      fonts:
+        - asset: fonts/RobotoCondensed-Light.ttf
+          weight: 300
+        - asset: fonts/RobotoCondensed-Regular.ttf
+          weight: 400
+        - asset: fonts/RobotoCondensed-Bold.ttf
+          weight: 700
+    - family: Raleway
+      fonts:
+        - asset: fonts/Raleway-Medium.ttf
+          weight: 500
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
